namespace java net.lab1318.costume.api.models.collection
namespace * costume.api.models.collection

exception InvalidCollectionIdException {
	string cause_message;
}
